# python-template

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.docker/: Dockerfile
.github/workflows/: python-app.yml
.scripts/: clean.sh  nginx_gen.sh
docs/: conf.py  index.md  index.rst  python_template.rst  reference.md
nginx/: nginx.conf
python_template/: __init__.py  app.py
tests/: test_app.py  test_version.py
